style: z-index and fixed menu

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ html, body{
     box-sizing: border-box;
 
     background-color: #FAFAFA;
+
+    position: relative;
 }
 .wrapper-line{
     transition: 1s;        
